--- a/main.html
+++ b/main.html
@@ -4,12 +4,78 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title> Bootstrap Card </title>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	
+	<div class="container">
+		<h1>Welcome to Sync5</h1>
+		<div class="card mb-5">
+			<div class="card-header">
+				New Features
+			</div>
+			<div class="card-body">
+			  <h5 class="card-title">Mobile and Tablet support</h5>
+			  <p class="card-text">With this new update you will be able to sync your work across large number of platforms.</p>
+			  <a href="#" class="btn btn-primary">Read more</a>
+			</div>
+		</div>
+		<!-- <div class="card-deck">
+			<div class="card card-deck mb-3 bg-danger text-white" style="max-width: 230px;height: 300px;">
+				<div class="card-header">
+					Alert
+				</div>
+				<div class="card-body">
+					<h5 class="card-title">Node Dead</h5>
+					<p class="card-text">Node 5(east-us) is offline for last 12 days</p>
+				</div>
+			</div>
+		</div>
+		<div class="card-deck">
+			<div class="card mt-3" style="max-width: 230px;">
+				<div class="card-header">
+					<img style="width: 100%;" src="https://www.pewtrusts.org/-/media/post-launch-images/2020/09/sln_sept8_1/16x9_m.jpg" alt="news_image">
+				</div>
+				<div class="card-body">
+					<h5 class="card-title">President under pressure</h5>
+					<p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+					<span class="text-muted">Last updated 12 mins ago</span>
+				</div>
+			</div>
+		</div> -->
+	</div>
+	<div class="container">
+		<div class="card-group">
+			<div class="card rounded border card-deck m-3 bg-danger text-white" style="max-width: 240px;height: 330px;">
+				<div class="card-header">
+					Alert
+				</div>
+				<div class="card-body">
+					<h5 class="card-title">Node Dead</h5>
+					<p class="card-text">Node 5(east-us) is offline for last 12 days</p>
+				</div>
+			</div>
+		    <div class="card rounded border m-3" style="max-width: 240px;">
+				<img src="https://www.pewtrusts.org/-/media/post-launch-images/2020/09/sln_sept8_1/16x9_m.jpg" alt="news" style="width: auto;">
+				<div class="card-body">
+				  <h5 class="card-title">President under Pressure</h5>
+				  <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+				  <span class="text-muted">Last updated 12 mins ago</span>
+				</div>
+			  </div>
+		</div>
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 
 </body>
 
